--- a/.cordova/config.json
+++ b/.cordova/config.json
@@ -1,1 +1,4 @@
-{"lib":{"www":{"id":"phonegap","version":"3.3.0","uri":"https://github.com/phonegap/phonegap-app-hello-world/archive/3.3.0.tar.gz"}},"id":"com.phonegap.helloworld","name":"HelloWorld"}
+{
+	"id":"co.edu.eafit.calcnumerico",
+	"name":"CalcNumerico"
+}
