base para métodos en ecuaciones con una variable

--- a/.cordova/config.json
+++ b/.cordova/config.json
@@ -1,4 +1,1 @@
-{
-	"id":"co.edu.eafit.calcnumerico",
-	"name":"CalcNumerico"
-}
+{"id":"co.edu.eafit.calcnumerico","name":"CalcNumerico","phonegap":{"id":815383}}
